added basic structure of homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>hello world!</h1>
-    
+    <header></header>
+    <section>
+        main image
+    </section>
+    <section>
+        club ethos
+    </section>
+    <section>
+        running locations, distance & times
+    </section>
+    <footer>
+        social media accounts links here  
+    </footer>
+
 </body>
 </html>
