--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     <title>Love Running</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <a href="index.html">
+            <h1> Love Running </h1> 
+            <nav> 
+                <ul>
+                    <li> <a href="index.html">Home</a></li>
+                    <li> <a href="#">Gallery</a></li>
+                    <li> <a href="#">Sign-up</a></li>
+                </ul>
+               
+                
+            </nav>
+        </a> 
+    </header>
     <section>
         main image
     </section>
