--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,20 +10,21 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
-            <h1> Love Running </h1> 
-            <nav> 
+            <h1 id="logo"> Love Running </h1>
+            <nav>
                 <ul>
                     <li> <a href="index.html">Home</a></li>
                     <li> <a href="#">Gallery</a></li>
                     <li> <a href="#">Sign-up</a></li>
                 </ul>
-               
-                
+
+
             </nav>
-        </a> 
+        </a>
     </header>
     <section>
         main image
@@ -34,8 +36,9 @@
         running locations, distance & times
     </section>
     <footer>
-        social media accounts links here  
+        social media accounts links here
     </footer>
 
 </body>
+
 </html>
