--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love Running Club for runners in Dublin">
-    <meta name="keywords" content="love runing, runing club, ireland, dublin">
+    <meta name="description" content="Love Running club for runners in Dublin, Ireland">
+    <meta name="keywords" content="love running, running club, ireland, dublin">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
@@ -14,33 +14,34 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 id="logo"> Love Running </h1>
-            <nav>
-                <ul id="menu">
-                    
-                    <li> <a href="#">Sign-up</a></li>
-                    <li> <a href="#">Gallery</a></li>
-                    <li> <a href="index.html" class="active">Home</a></li>
-                    
-                </ul>
-
-
-            </nav>
+            <h1 id="logo">Love Running</h1>
         </a>
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <section>
-        main image
+    <section id="hero-outer">
+        <div id="hero-image"></div>
     </section>
     <section>
-        club ethos
+        Club Ethos
     </section>
     <section>
-        running locations, distance & times
+        Running locations, distances and times
     </section>
     <footer>
-        social media accounts links here
+        social links here
     </footer>
-
 </body>
 
 </html>
