--- a/index.html
+++ b/index.html
@@ -82,35 +82,35 @@
     </section>
     <section id="times">
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fa-solid fa-building"></i></h2>
             <h3>Monday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
             <h3>6:30pm</h3>
         </div>
         <div>
-            <h2>Trail</h2>
+            <h2 >Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Wednesday</h3>
             <h3>10k</h3>
             <h3>Phoenix Park</h3>
             <h3>6:30pm</h3>
         </div>
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fa-solid fa-building"></i></h2>
             <h3>Friday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
             <h3>6:30pm</h3>
         </div>
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Saturday</h3>
             <h3>5k</h3>
             <h3>Phoenix Park</h3>
             <h3>6:30pm</h3>
         </div>
         <div>
-            <h2>Coffee</h2>
+            <h2>Coffee <i class="fa-solid fa-mug-hot"></i></h2>
             <h3>Sunday</h3>
             <h3>0k</h3>
             <h3>The Marker Hotel</h3>
