--- a/index.html
+++ b/index.html
@@ -118,7 +118,20 @@
         </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens in a new tab)" ><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter" target="_blank" rel="noopener" aria-label="Visit our twitter page (opens in a new tab)" ><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page (opens in a new tab)" ><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page (opens in a new tab)" ><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>>
     </footer>
 
     <!--font awesome script-->
