added gallery images & styling

--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,17 @@
             </ul>
         </nav>
     </header>
-   
+   <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="two-athletes running">
+        <img src="assets/images/girls.jpg" alt="three girls at charity running event">
+        <img src="assets/images/man.jpg" alt="solo male running on beach">
+        <img src="assets/images/mud-run.jpg" alt="man at charity run face painted">
+        <img src="assets/images/runner1.jpg" alt="solo female runner jogging">
+        <img src="assets/images/runner2.jpg" alt="runner competing in marathon">
+        <img src="assets/images/runner3.jpg" alt="solo female runner jogging on beach">
+        <img src="assets/images/runner4.jpg" alt="large group of runners">
+        <img src="assets/images/running_gang.jpg" alt="two women runners taking a muddie selfie">
+   </section>
     <footer>
         <ul class="social-networks">
             <li>
